src/packaged/objects/LogEntry__c/LogEntry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>