src/packaged/objects/LogEntry__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>