src/packaged/objects/LogEntry__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>