src/packaged/objects/LogEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>RequestId__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Level__c</columns>
    <columns>Source__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>