src/packaged/objects/LogEntry__c/listViews/My_Log_Entries.listView-meta.xml
<ListView>
    <fullName>My_Log_Entries</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>RequestId__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Level__c</columns>
    <columns>Source__c</columns>
    <columns>Message__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Log Entries</label>
</ListView>